Changelog for GHCiD

    #35, change the titlebar icon on Windows
0.4.2
    Fix a GHC 7.6 warning
0.4.1
    #37, add a --notitle flag
    Require extra-1.2
0.4
    #33, make Ctrl-C more robust
    #31, add an outputfile feature
    #32, make newer warnings first (save a file, view its warnings)
    #28, fix issues on VIM file saves
    #29, support running a quick test on each save
    Add a --directory flag to change directory first
    #26, use fs-notify to avoid excessive wakeups
    #25, detect console size just before using it
0.3.6
    #24, don't error out if error/putStrLn are not imported
0.3.5
    #19, put errors in bold
    #9, display interesting information in the title bar
    #7, reload if the .ghci or .cabal file changes
    Use nubOrd
    Require extra-1.1
0.3.4
    #21, if you aren't waiting for any files, exit
0.3.3
    #21, if the root file is missing, report an error
    #20, avoid an O(n^2) nub
0.3.2
    #18, reformat excessively long lines, add a --width flag
0.3.1
    Ensure if there are lots of warnings, the first error gets shown
0.3
    #11, ignore certain GHCi-only warnings
    #13, fix version printing
    #8, display Loading... when starting
    Require the extra library
    #14, figure out the terminal height automatically
0.2
    #6, rewrite as a library
    Remove duplicate error messages from cabal repl
0.1.3
    #2, handle files that get deleted while loaded
    #3, flesh out the test suite
    #4, give a polite error if ghci does not start
    #5, add --topmost flag to make the window topmost
0.1.2
    Add a very simple test suite
    Default to cabal repl if there is no .ghci file
    #1, if there is an IOError just :reload
    Say why you are reloading
0.1.1
    Support arguments to --command
0.1
    Initial version